--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -6,8 +6,11 @@ name: Check Terraform Modules
 on:
   pull_request:
 
+
 jobs:
   check-terraform-module:
     name: Check Terraform Module
     uses: canonical/sdcore-github-workflows/.github/workflows/terraform.yaml@main
     secrets: inherit
+    with:
+      working-directory: ./modules
