Creating v1.4 release branch

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,17 @@
 version: 2
 updates:
   - package-ecosystem: "github-actions"
+    target-branch: v1.4
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     commit-message:
       prefix: "chore: "
 
   - package-ecosystem: "terraform"
+    target-branch: v1.4
     directory: "/modules/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     commit-message:
       prefix: "chore: "
