chore: Scheduling dependabot for release 1.4 (#31)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,20 @@
 version: 2
 updates:
   - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    commit-message:
+      prefix: "chore: "
+
+  - package-ecosystem: "terraform"
+    directory: "/modules/"
+    schedule:
+      interval: "daily"
+    commit-message:
+      prefix: "chore: "
+
+  - package-ecosystem: "github-actions"
     target-branch: v1.4
     directory: "/"
     schedule:
