--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -7,13 +7,13 @@ on:
   push:
   pull_request:
     branches:
-      - v1.4
+      - main
 
 
 jobs:
   check-terraform-module:
     name: Check Terraform Module
-    uses: canonical/sdcore-github-workflows/.github/workflows/terraform.yaml@v0.0.1
+    uses: canonical/sdcore-github-workflows/.github/workflows/terraform.yaml@v1.0.0
     secrets: inherit
     with:
       working-directory: ./modules
