--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -5,9 +5,11 @@ name: Check Terraform Modules
 
 on:
   push:
+    branches:
+      - v1.5
   pull_request:
     branches:
-      - main
+      - v1.5
 
 
 jobs:
